2001-06-17  Tom Tromey  <tromey@redhat.com>

	* tests/acoutput2.test: New file.
	* tests/Makefile.am (TESTS): Added acoutput2.test.

2001-06-15  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (TESTS): Added libtool.test.
	* tests/libtool.test: New file.

2001-06-14  Tom Tromey  <tromey@redhat.com>

	Fix some lisp bugs reported by Bruno Haible:
	* lib/am/lisp.am (uninstall-%DIR%LISP): Added DESTDIR to the
	echo.
	(install-%DIR%LISP): Handle case where lispdir is not defined.
	(uninstall-%DIR%LISP): Likewise.
	(.el.elc): Added `else' clause.

	Fix for bug reported by Steve M. Robbins:
	* automake.in (handle_single_transform_list): When building a file
	from a subdirectory, continue to use `AM_' prefix.
	* tests/Makefile.am (TESTS): Added subobj7.test.
	* tests/subobj7.test: New file.

	* lib/am/configure.am ($(top_builddir)/config.status): Added
	$(top_builddir) prefix to work around problems with some vendor
	makes.  From Nicholas Joly.

	* automake.in (yacc_lex_finish_helper): Find ylwrap in
	top_srcdir.  From Tim Van Holder.
	* tests/Makefile.am (TESTS): Added yacc6.test.
	* tests/yacc6.test: New file.

2001-06-14  Tim Van Holder  <tim.van.holder@pandora.be>

	* tests/defs, tests/installsh.test: Properly support
	DOS-style paths.

2001-06-14  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (TESTS): Added mdate4.test.
	* tests/mdate4.test: New file.

	* aclocal.in (scan_m4_files): Removed unused variable.

2001-06-14  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* aclocal.in (scan_m4_files): Tweak the building of &search so
	that multiple macro names can be found on the same line.  Ensure
	we match whole macro name, not only substrings.

2001-06-12  Tom Tromey  <tromey@redhat.com>

	* automake.texi (ANSI): Minor clarification.
	(Other GNU Tools): Don't mention Guile.
	(Guile): Removed.
	(Java Support): Mention file extensions.
	(Man pages): Mention dist_.  Don't mention info pages.

2001-06-11  Tom Tromey  <tromey@redhat.com>
