@@ -1,5 +1,10 @@
 2001-06-17  Tom Tromey  <tromey@redhat.com>
 
+	Fix for libtool.test:
+	* automake.in (generate_makefile): Call handle_libtool.
+	(handle_libtool): New sub.
+	(handle_compile): Don't read `libtool' file.
+
 	* tests/acoutput2.test: New file.
 	* tests/Makefile.am (TESTS): Added acoutput2.test.
 
